<resources>
    <string name="app_name">Chinois Interactif</string>
    <string name="email">yesuaini@neuf.fr</string>
    <string name="action_settings">Préférences</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_settings">Settings</string>

    <string name="main_practise">Pratiquer</string>
    <string name="main_learn">Apprendre</string>
    <string name="main_set_dict">Mettre un dictionnaire</string>
    <string name="main_wordList">Liste de mots</string>

    <!-- Add Word -->


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ic_menu_map">Cartes</string>
    <string name="title_activity_download">Télécharger</string>
    <string name="title_activity_lessons">Cours de Chinois</string>
    <string name="main_progression">Progression</string>
    <string name="main_game">Jeux</string>

    <!-- Error messages -->
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_info">InfoActivity</string>

    <string name="character_viewer_str">Caractère du jour</string>
    <string name="mission_title">Mission</string>
    <string name="lesson_vocabulary">Vocabulaire de la leçon</string>
    <string name="lesson_video">Video</string>
    <string name="hsk1_list_str">Niveau 1</string>
    <string name="quiz_str">Quiz</string>
    <string name="enable_pinyin_str">Toggle pinyin</string>
    <string name="show_correct_answer_str">Toggle answer correction</string>
    <string name="exam_str">Test</string>
    <string name="exam_result">Résultat du test</string>
    <string name="rename_word_list">Renommer la liste</string>
    <string name="word_list_name">Nom de liste</string>
    <string name="add_new_word">Ajouter un mot</string>
    <string name="save_and_quit">Sauver et quitter</string>
    <string name="hanzi_input_prompt">Mot ou phrase en chinois:</string>
    <string name="pinyin_input_prompt">Mot ou phrase en pinyin:</string>
    <string name="definition_input_prompt">Traduction du mot ou de la phrase:</string>
    <string name="cancel_option">Annuler</string>
    <string name="ok_option">OK</string>
    <string name="save_new_word">Sauver</string>
    <string name="add_new_word_list_button_string">Créer une nouvelle liste</string>
    <string name="delete_word_list">Supprimer la liste</string>
    <string name="edit_word_list">Editer la liste</string>
    <string name="delete_word">Supprimer un mot</string>
    <string name="edit_word">Modifier un mot</string>
    <string name="system_defined_word_lists_cannot_be_edited">System-defined word lists cannot be edited.</string>
    <string name="system_defined_word_lists_cannot_be_deleted">System-defined word lists cannot be deleted.</string>
    <string name="system_defined_word_lists_cannot_be_renamed">System-defined word lists cannot be renamed.</string>
    <string name="word_list_too_short">This word list has less than 4 words; it is too short to use for a quiz. Add more words to enable the quiz mode!</string>
    <string name="exam_word_list_too_short">This word list has less than 4 words; it is too short to use for an exam. Add more words to enable the exam mode!</string>
    <string name="invalid_fields">One or more fields are invalid</string>
    <string name="invalid_wordlist_name">Invalid or duplicate name, choose another one</string>
    <string name="no_chars_found">Aucun caractère trouvé...</string>
    <string name="fatal_parser_error">Fatal parser error</string>
    <string name="learned_text">Appris?</string>
    <string name="export_word_list">Exporter la liste</string>
    <string name="continue_str">Continuer</string>
    <string name="reset">Réinitialiser</string>
    <string name="ongoing_exam_found">Test en cours existent</string>
    <string name="exam_reset_continue_cancel">Un test est en cours pour cette liste. Voulez vous continuer ou recommencer ?</string>
    <string name="exam_continue_cancel">Un test est en cours. Voulez vous continuer ?</string>
    <string name="correct_answers">Réponses correctes:</string>
    <string name="incorrect_answers">Réponses incorrectes:</string>
    <string name="grade">Grade:</string>
    <string name="return_str">Revenir à la liste</string>
    <string name="return_condensed">Revenir</string>
    <string name="ongoing_exam">test en cours...</string>
    <string name="ongoing_exam_condensed">En cours ...</string>
    <string name="random_word">Caractère du jour</string>
    <string name="new_word">Nouveau mot</string>
    <string name="piechart_error_msg">Piechart percentages are not equal to 100</string>
    <string name="installing_msg">"Chargement ..."</string>
    <string name="exam_results_over_time">Résultat du test (temps écoulés):</string>
    <string name="exam_result_pinyin_tip">Pour un défi plus grand, désactiver le pinyin menu.</string>
    <string name="import_word_list">Importer la liste</string>
    <string name="import_word_list_condensed">Importer...</string>
    <string name="loading_import_files_msg">Chargement du fichier importé</string>
    <string name="importing_wordlist_msg">Importer la liste de mot</string>
    <string name="lesson_exercice">Exercice</string>
    <string name="lesson_exam">Examen</string>


<!-- hangman -->

    <!-- tab -->
    <string name="tab_map">Carte</string>
    <string name="tab_course">Cours</string>
    <string name="tab_videolesson">Vidéo</string>
    <string name="tab_vocabulary">Vocabulaire</string>
    <string name="tab_exercices">Exercices</string>
    <string name="intro_message">Test tab</string>
    <string name="loading_web_view">Chargement des données en cours</string>
    <string name="mission_accept">Accepter la mission!</string>
    <string name="lesson_training">Se former</string>


</resources>
