<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_download" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/main_set_dict_icon"
                android:title="@string/ic_menu_map" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
