<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contextClickable="false"
        android:gravity="center_vertical|center|center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical"
                android:baselineAligned="false"
                android:transitionGroup="true"
                android:layout_width="wrap_content">
                <View android:id="@+id/game" style="@style/icon_main" android:background="@drawable/main_game" />
                <TextView style="@style/icon_main_text" android:text="@string/main_game" />
            </LinearLayout>

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical">
                <View android:id="@+id/progression" style="@style/icon_main" android:background="@drawable/main_progression" />
                <TextView style="@style/icon_main_text" android:text="@string/main_progression" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical" >
                <View android:id="@+id/dictList" style="@style/icon_main" android:background="@drawable/main_set_dict" />
                <TextView style="@style/icon_main_text" android:text="@string/main_set_dict" />
            </LinearLayout>

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical">
                <View android:id="@+id/wordList" style="@style/icon_main" android:background="@drawable/main_word_list" />
                <TextView style="@style/icon_main_text" android:text="@string/main_wordList" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical">
                <View android:id="@+id/practise" style="@style/icon_main" android:background="@drawable/main_practise" />
                <TextView style="@style/icon_main_text" android:text="@string/main_practise" />
            </LinearLayout>

            <LinearLayout style="@style/main_icon_container" android:orientation="vertical">
                <View android:id="@+id/learn" style="@style/icon_main" android:background="@drawable/main_learn" />
                <TextView style="@style/icon_main_text" android:text="@string/main_learn" />
            </LinearLayout>

        </TableRow>


            <LinearLayout style="@style/main_icon_container" android:orientation="vertical">
                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="36dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
            </LinearLayout>





    </TableLayout>


</RelativeLayout>
