<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/drawer_layout" xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:openDrawer="start" >

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			xmlns:ads="http://schemas.android.com/apk/res-auto"
			xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<android.support.design.widget.AppBarLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:theme="@style/AppTheme.AppBarOverlay">

				<android.support.v7.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:background="?attr/colorPrimary"
					app:popupTheme="@style/AppTheme.PopupOverlay" />

			</android.support.design.widget.AppBarLayout>

			<LinearLayout android:id="@+id/main_menu_layout" android:layout_width="match_parent"  android:layout_height="match_parent" android:layout_centerHorizontal="true"	android:layout_centerVertical="true" android:orientation="vertical" android:visibility="visible"	android:paddingTop="35sp" >
				<Button	android:id="@+id/lessonVideo" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/lesson_video" />
				<Button	android:id="@+id/lessonVocabulary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/lesson_vocabulary" />
				<Button	android:id="@+id/lessonCharacter" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"	android:text="@string/character_viewer_str" />
				<Button	android:id="@+id/lessonExercice" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp"	android:text="@string/lesson_exercice" />
				<Button	android:id="@+id/lessonExam" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/lesson_exam" />
			</LinearLayout>

			<com.google.android.gms.ads.AdView
				android:id="@+id/adView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				ads:adSize="BANNER"
				ads:adUnitId="@string/banner_ad_unit_id"
				android:layout_alignParentBottom="true"
				android:layout_marginBottom="36dp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentStart="true" />

		</RelativeLayout>

	</android.support.design.widget.CoordinatorLayout>

	<android.support.design.widget.NavigationView
		android:id="@+id/nav_view"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/nav_header_navigation"
		app:menu="@menu/activity_navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>

