<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start" >

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </android.support.design.widget.AppBarLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <yesuaini.chinoisinteractif.hsk.views.ExamResultPieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="8" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" >

        <TextView
            android:id="@+id/wrongAnswersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/wrongAnswersLabel"
            android:layout_alignBottom="@+id/wrongAnswersLabel"
            android:layout_alignLeft="@+id/correctAnswersTextView"
            android:text="105"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffff0000"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/correctAnswersTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/correctAnswersLabel"
            android:layout_alignBottom="@+id/correctAnswersLabel"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/wrongAnswersLabel"
            android:text="108"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff00ff00"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/gradeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gradeLabel"
            android:layout_alignBottom="@+id/gradeLabel"
            android:layout_alignLeft="@+id/wrongAnswersTextView"
            android:text="C"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="48sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/gradeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wrongAnswersLabel"
            android:layout_below="@+id/wrongAnswersLabel"
            android:layout_marginTop="39dp"
            android:text="@string/grade"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/wrongAnswersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/correctAnswersLabel"
            android:layout_below="@+id/correctAnswersLabel"
            android:layout_marginTop="17dp"
            android:text="@string/incorrect_answers"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/correctAnswersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/correct_answers"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

</LinearLayout>



<com.google.android.gms.ads.AdView
android:id="@+id/adView"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
ads:adSize="BANNER"
ads:adUnitId="@string/banner_ad_unit_id"
android:layout_alignParentBottom="true"
android:layout_marginBottom="36dp"
android:layout_alignParentEnd="true"
android:layout_alignParentStart="true" />

    </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

<android.support.design.widget.NavigationView
android:id="@+id/nav_view"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
android:fitsSystemWindows="true"
app:headerLayout="@layout/nav_header_navigation"
app:menu="@menu/activity_navigation_drawer"/>

    </android.support.v4.widget.DrawerLayout>